--- a/main.html
+++ b/main.html
@@ -2690,7 +2690,7 @@ textarea.form-input::-webkit-resizer { display: none; }
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="https://k.top4top.io/p_25869gvz81.jpg" alt="" loading="lazy">
+                  <img src="https://j.top4top.io/p_2586klh4f1.jpg" alt="" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">music player 1</h3>
