--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>whatsapp </title>
+<title>insta 2012 </title>
 <style>
 :root {
   --plyr-color-main: #009227;
