--- a/music3.html
+++ b/music3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>login form</title>
+<title>music player </title>
 <style>
 :root {
   --plyr-color-main: #009227;
@@ -458,7 +458,7 @@ firebase.auth().onAuthStateChanged(function(user)
             {
                 if(!user) 
                 {
-                    window.location.href = "main";
+                    window.location.href = "index";
                 }
             });
 
