--- a/page2.html
+++ b/page2.html
@@ -448,7 +448,7 @@ firebase.auth().onAuthStateChanged(function(user)
             {
                 if(!user) 
                 {
-                    window.location.href = "main";
+                    window.location.href = "index";
                 }
             });
 
