--- a/privacyp.html
+++ b/privacyp.html
@@ -228,5 +228,27 @@ _WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML1', 'main', doc
 _WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML3', 'main', document.getElementById('HTML3'), {}, 'displayModeFull'));
 _WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML2', 'main', document.getElementById('HTML2'), {}, 'displayModeFull'));
 </script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
+
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
+
+<script>
+
+var firebaseConfig = { apiKey: "AIzaSyAFPHSQdRugV6ngWGtPuUfSzBhS94D30hU", authDomain: "reda-7d506.firebaseapp.com", projectId: "reda-7d506", storageBucket: "reda-7d506.appspot.com", messagingSenderId: "637395019512", appId: "1:637395019512:web:1c7834e529eb90dcaf3d0d", measurementId: "G-Q7H13D1YFC" }; firebase.initializeApp(firebaseConfig); firebase.analytics();
+
+firebase.auth().onAuthStateChanged(function(user)
+            {
+                if(!user) 
+                {
+                    window.location.href = "index";
+                }
+            });
+
+      
+</script>
 </body>
 </html>
