--- a/landing2.html
+++ b/landing2.html
@@ -458,7 +458,7 @@ firebase.auth().onAuthStateChanged(function(user)
             {
                 if(!user) 
                 {
-                    window.location.href = "main";
+                    window.location.href = "index";
                 }
             });
 
