--- a/html-page-maker.html
+++ b/html-page-maker.html
@@ -116,7 +116,7 @@ h6{
 
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.11.3/ckeditor.js'></script><script  src="./script.js"></script>
-  <h6>&copy; Gitwb</h6>
+  <h6>&copy; beweble</h6>
   
 </body>
 </html>
@@ -161,6 +161,28 @@ while (( element = elements.getItem( i++ ) )) {
     ],
   });
 }
+</script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
+
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
+
+<script>
+
+var firebaseConfig = { apiKey: "AIzaSyAFPHSQdRugV6ngWGtPuUfSzBhS94D30hU", authDomain: "reda-7d506.firebaseapp.com", projectId: "reda-7d506", storageBucket: "reda-7d506.appspot.com", messagingSenderId: "637395019512", appId: "1:637395019512:web:1c7834e529eb90dcaf3d0d", measurementId: "G-Q7H13D1YFC" }; firebase.initializeApp(firebaseConfig); firebase.analytics();
+
+firebase.auth().onAuthStateChanged(function(user)
+            {
+                if(!user) 
+                {
+                    window.location.href = "index";
+                }
+            });
+
+      
 </script>
 </body>
 </html>
