--- a/tweak1.html
+++ b/tweak1.html
@@ -189,7 +189,7 @@ h6{
 
 <section class="services" id="services">
   	
-  	    <h3>&copy; GITWB</h3>
+  	    <h3>&copy; Beweble</h3>
 
      <div class="box-container">
 
