--- a/tweak1.html
+++ b/tweak1.html
@@ -4,7 +4,7 @@
 <meta name="google-site-verification" content="AenwehzIlm2b2GZBhCZC0W5ftKwbloftWJN88iBFW88" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>gitwb</title>
+<title>beweble</title>
 </head>
 <body>
 	<style>
@@ -194,7 +194,7 @@ h6{
      <div class="box-container">
 
        <div class="box">
-                	     <img src="https://f.top4top.io/p_233199hqw1.jpg" alt="">
+                	     <img src="https://k.top4top.io/p_2583hzxtl1.jpg" alt="">
         
             <p>Add a custom background image in a setting</p>
         
