--- a/tweak4.html
+++ b/tweak4.html
@@ -4,7 +4,7 @@
 <meta name="google-site-verification" content="AenwehzIlm2b2GZBhCZC0W5ftKwbloftWJN88iBFW88" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>gitwb</title>
+<title>beweble</title>
 </head>
 <body>
 	<style>
@@ -189,12 +189,12 @@ h6{
 
 <section class="services" id="services">
   	
-  	    <h3>&copy; GITWB</h3>
+  	    <h3>&copy; beweble</h3>
 
      <div class="box-container">
 
        <div class="box">
-                	     <img src="https://k.top4top.io/p_2331f57g41.jpg" alt="">
+                	     <img src="https://h.top4top.io/p_2583848cm1.jpg" alt="">
         
             <p>
 Label your pages</p>
@@ -213,5 +213,27 @@ Label your pages</p>
           <p></p>
     </footer>
         </div>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
+
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
+
+<script>
+
+var firebaseConfig = { apiKey: "AIzaSyAFPHSQdRugV6ngWGtPuUfSzBhS94D30hU", authDomain: "reda-7d506.firebaseapp.com", projectId: "reda-7d506", storageBucket: "reda-7d506.appspot.com", messagingSenderId: "637395019512", appId: "1:637395019512:web:1c7834e529eb90dcaf3d0d", measurementId: "G-Q7H13D1YFC" }; firebase.initializeApp(firebaseConfig); firebase.analytics();
+
+firebase.auth().onAuthStateChanged(function(user)
+            {
+                if(!user) 
+                {
+                    window.location.href = "index";
+                }
+            });
+
+      
+</script>
 </body>
 </html>
