--- a/page1.html
+++ b/page1.html
@@ -306,8 +306,7 @@ a{
             <div class="lx-card">
               <a class="accordion">Description</a>
               <div class="panel">
-                <p>Explain how to activate WhatsApp without the Internet when it is interrupted in your country or blocked on an application  <a href="https://instagram.com/gitwb_" target="_blank" rel="noopener noreferrer"> https://instagram.com/gitwb_</a>
-                </p>
+                <p>Explain how to activate WhatsApp without the Internet when it is interrupted in your country or blocked on an application  <a style="color:#ffd36a" href="https://instagram.com/beweble" target="_blank" rel="noopener noreferrer"> Beweble</a></p>
 
               </div>
             </div>
