--- a/page2.html
+++ b/page2.html
@@ -306,8 +306,7 @@ a{
             <div class="lx-card">
               <a class="accordion">Description</a>
               <div class="panel">
-                <p> Extracting Instagram accounts available 2012/2013<a href="https://instagram.com/gitwb_" target="_blank" rel="noopener noreferrer"> https://instagram.com/gitwb_</a>
-                </p>
+                <p> Extracting Instagram accounts available 2012/2013  <a style="color:#ffd36a" href="https://instagram.com/beweble" target="_blank" rel="noopener noreferrer"> Beweble</a> </p>
 
               </div>
             </div>
