--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 \*-----------------------------------*/
 
 /**
- * copyright 2022 @codewithsadee
+ * copyright 2022 @beweble
  */
 
 
@@ -1318,7 +1318,7 @@ video{
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="https://i.top4top.io/p_2582hbajv1.png" type="image/x-icon">
 
   <!-- 
     - custom css link
@@ -1439,7 +1439,7 @@ video{
           <div class="section-header-wrapper">
 
             <h2 class="h2 section-title">Video ad </h2>
-<a href='https://apk.e-droid.net/apk/app2135083-5sw3px.apk?v=3' >
+<a href='beweble-apk' >
             <button class="btn btn-primary">Beweble Apk</button>
 </a>
           </div>
@@ -1453,7 +1453,7 @@ video{
                 <figure class="product-banner">
 
       <video  id="myVideo" controls="controls">
-      	        <source  src="https://d.top4top.io/m_2384curb01.mp4" type="video/mp4">
+      	        <source  src="https://f.top4top.io/m_258818u4t1.mov" type="video/mp4">
 
                   <div class="product-actions">
                     <button class="product-card-menu">
