--- a/index.html
+++ b/index.html
@@ -1453,7 +1453,7 @@ video{
                 <figure class="product-banner">
 
       <video  id="myVideo" controls="controls">
-      	        <source  src="https://f.top4top.io/m_258818u4t1.mov" type="video/mp4">
+      	        <source  src="https://l.top4top.io/m_2588j261l1.mp4" type="video/mp4">
 
                   <div class="product-actions">
                     <button class="product-card-menu">
