--- a/beweble.html
+++ b/beweble.html
@@ -322,7 +322,7 @@ a {
   </section>
   <section class="grid">
     <a href="YmMyM" class="grid__photo" style="background-image: url('https://c.top4top.io/p_2582tn4m31.jpg' );"></a>
-    <a href="A2M2Y" class="grid__photo" style="background-image: url('https://d.top4top.io/p_2582koyp61.jpg');"></a>
+    <a href="A2M2Y" class="grid__photo" style="background-image: url('https://i.top4top.io/p_2588tg70w1.jpg');"></a>
     <a href="CfXDg" class="grid__photo" style="background-image: url('https://c.top4top.io/p_2582tn4m31.jpg');"></a>
 
   </section>
