--- a/YmMyM.html
+++ b/YmMyM.html
@@ -160,7 +160,7 @@ body section .description strong {
         </svg>
       </a>
     </div>
-    <div class="description">Sincere thanks and great gratitude to the brothers in the company "gitwb", with your sincere wishes for the time of success and progress the team in the company that deals with the highest rates of professionalism and it is natural to reflect this in the quality of production God forgive the dearest and pure men who ordered this project<strong></strong></div>
+    <div class="description">Sincere thanks and great gratitude to the brothers in the company "beweble", with your sincere wishes for the time of success and progress the team in the company that deals with the highest rates of professionalism and it is natural to reflect this in the quality of production God forgive the dearest and pure men who ordered this project<strong></strong></div>
   </section>
 </body>
 <!-- partial -->
