--- a/A2M2Y.html
+++ b/A2M2Y.html
@@ -366,7 +366,7 @@ body {
         </div>
         <div class="side-icon like-btn">
           <i class="fa fa-heart-o like-icon"></i>
-          <p class="like-number">100000</p>
+          <p class="like-number">249k</p>
         </div>
 
         <div class="side-icon comment-btn">
@@ -377,7 +377,7 @@ body {
         <div class="side-icon share-btn">
           <i class="fa fa-share share-icon"></i>
           <a href="https://beweble.cf/A2M2Y" >
-          <p class="share-number">10</p>
+          <p class="share-number">999</p>
           </a>
         </div>
 
