--- a/server-services.html
+++ b/server-services.html
@@ -376,9 +376,9 @@ border: 1px solid #FFD36A;
    
     <a class="panel hover-float">
       <div class="panel-header">
-        <img class="panel-logo" src="https://g.top4top.io/p_2493yi2sp1.jpg" alt="Tektronix logo">
+        <img class="panel-logo" src="https://h.top4top.io/p_258200nk71.png" alt="Tektronix logo">
       </div>
-      <img class="panel-image" src="https://i.top4top.io/p_2494wcbs11.jpg" alt="Tektronix Thermal camera">
+      <img class="panel-image" src="https://c.top4top.io/p_2583z3jhx1.jpg" alt="Tektronix Thermal camera">
       <div class="panel-body">
         <h4 class="product-title">windows server</h4>
         <hr>
