--- a/beweble-apk.html
+++ b/beweble-apk.html
@@ -49,7 +49,7 @@
                 <ul>
                 <li><a href="index">home</a></li>
                 <li><a href="contactus">contact us</a></li>
-                <li><a href="privacyp">privacy policy </a></li>
+                <li><a href="privacypolicy">privacy policy </a></li>
                 </ul>
                 <ul>
                     <li><a href="signin">Sign In</a></li>
