--- a/main.html
+++ b/main.html
@@ -2163,6 +2163,24 @@ textarea.form-input::-webkit-resizer { display: none; }
 
           <ul class="service-list">
 
+  <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="https://g.top4top.io/p_2590466ss1.png" alt="" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Company Name Generator</h4>
+
+                <p class="service-item-text">
+  A tool that creates a name for your company or business 
+                </p>
+                	       <a href="company-name-generator" class= "btn" >Run</a>
+              </div>
+
+            </li>
+            
+            
             <li class="service-item">
 
               <div class="service-icon-box">
