--- a/company-name-generator.html
+++ b/company-name-generator.html
@@ -34,7 +34,7 @@ body, input {
   border: 0;
   border-radius:5px;
   padding: 8px 0;
-  width: 128px;
+  width:250px;
   background:#ffd36a;
   box-shadow: 0 .2rem 1.5rem #ffd36a;
   border: 1px solid  #000;
@@ -241,7 +241,7 @@ body, input {
   <meta charset="UTF-8">
   <title>CodePen - Startup name generator</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="./styl.css">
 
 </head>
 <body>
