--- a/ad.html
+++ b/ad.html
@@ -192,7 +192,7 @@ font-family: 'work sans', sans-serif;
   <meta charset="UTF-8">
   <title>ad</title>
   
-<meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="./style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="./stylehhh.css">
 
 </head>
 <body>
