--- a/AD.html
+++ b/AD.html
@@ -205,7 +205,7 @@ font-family: 'work sans', sans-serif;
 	</a>
 	<div class="top-right"><i class="fa fa-audio-description"></i></div>
 	<a href="page1" >
-  <img src="https://d.top4top.io/p_25879xpdk1.jpg" width="100%" />
+  <img src="https://i.top4top.io/p_2617qr4pq1.jpg" width="100%" />
   </a>
  </div>
   
