--- a/AD.html
+++ b/AD.html
@@ -96,7 +96,7 @@ a{
 	} 
 	
 
-.top-right{
+.top-right,.top-left{
 font-family: 'work sans', sans-serif;
   font-size: 17px;
    animation: Color 4s linear infinite;
@@ -192,7 +192,7 @@ font-family: 'work sans', sans-serif;
   <meta charset="UTF-8">
   <title>CodePen - Automatic image slider</title>
   
-<meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="">
+<meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
@@ -204,7 +204,7 @@ font-family: 'work sans', sans-serif;
 	<div class="top-left"><i class="fa fa-info-circle"></i></div>
 	</a>
 	<div class="top-right"><i class="fa fa-audio-description"></i></div>
-	<a href="page1" >
+	<a href="https://redaccx.github.io/gitwb/page1" >
   <img src="https://i.top4top.io/p_2617qr4pq1.jpg" width="100%" />
   </a>
  </div>
@@ -214,7 +214,7 @@ font-family: 'work sans', sans-serif;
 	<div class="top-left"><i class="fa fa-info-circle"></i></div>
 	</a>
 	<div class="top-right"><i class="fa fa-audio-description"></i></div>
-	<a href="company-name-generator" >
+	<a href="https://redaccx.github.io/gitwb/company-name-generator" >
   <img src="https://f.top4top.io/p_2617rz3nk1.jpg" width="100%" />
   </a>
 </div>
@@ -224,7 +224,7 @@ font-family: 'work sans', sans-serif;
 	<div class="top-left"><i class="fa fa-info-circle"></i></div>
 	</a>
 	<div class="top-right"><i class="fa fa-audio-description"></i></div>
-	<a href="beweble" >
+	<a href="https://redaccx.github.io/gitwb/beweble" >
   <img src="https://e.top4top.io/p_26175slts1.jpg" width="100%" />
   </a>
 </div> 
@@ -234,7 +234,7 @@ font-family: 'work sans', sans-serif;
 	<div class="top-left"><i class="fa fa-info-circle"></i></div>
 	</a>
 	<div class="top-right"><i class="fa fa-audio-description"></i></div>
-	<a href="page3" >
+	<a href="https://redaccx.github.io/gitwb/page3" >
   <img src="https://b.top4top.io/p_2617iki8e1.jpg" width="100%" />
   </a>
 </div> 
@@ -244,7 +244,7 @@ font-family: 'work sans', sans-serif;
 	<div class="top-left"><i class="fa fa-info-circle"></i></div>
 	</a>
 	<div class="top-right"><i class="fa fa-audio-description"></i></div>
-	<a href="store" >
+	<a href="https://redaccx.github.io/gitwb/store" >
   <img src="https://j.top4top.io/p_2617v6h7w1.jpg" width="100%" />
   </a>
 </div>  
