--- a/AD.html
+++ b/AD.html
@@ -192,7 +192,7 @@ font-family: 'work sans', sans-serif;
   <meta charset="UTF-8">
   <title>CodePen - Automatic image slider</title>
   
-<meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="./style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="">
 
 </head>
 <body>
