--- a/AD.html
+++ b/AD.html
@@ -204,7 +204,7 @@ font-family: 'work sans', sans-serif;
 	<div class="top-left"><i class="fa fa-info-circle"></i></div>
 	</a>
 	<div class="top-right"><i class="fa fa-audio-description"></i></div>
-	<a href="https://redaccx.github.io/gitwb/page1" >
+	<a href="https://redaccx.github.io/gitwb/page1" target="_blank">
   <img src="https://i.top4top.io/p_2617qr4pq1.jpg" width="100%" />
   </a>
  </div>
