--- a/infoo.html
+++ b/infoo.html
@@ -125,7 +125,7 @@ a{
 	<a href="https://wa.me/96181112046?text=I%20want%20to%20show%20an%20ad%20on%20your%20platform%20how%20much%20is%20the%20price" target="_blank" >
 	<div class="top-right"><i class="fa fa-phone"></i></div>
 	  </a>
-  <img src="https://l.top4top.io/p_2618815b91.jpg" width="100%" />
+  <img src="https://j.top4top.io/p_2618shswe1.jpg" width="100%" />
 
  </div>
   
@@ -136,7 +136,7 @@ a{
 	<a href="https://wa.me/96181112046?text=I%20want%20to%20show%20an%20ad%20on%20your%20platform%20how%20much%20is%20the%20price" target="_blank" >
 	<div class="top-right"><i class="fa fa-phone"></i></div>
 	  </a>
-  <img src="https://l.top4top.io/p_2618815b91.jpg" width="100%" />
+  <img src="https://j.top4top.io/p_2618shswe1.jpg" width="100%" />
   </a>
 </div>
   
@@ -147,7 +147,7 @@ a{
 	<a href="https://wa.me/96181112046?text=I%20want%20to%20show%20an%20ad%20on%20your%20platform%20how%20much%20is%20the%20price" target="_blank" >
 	<div class="top-right"><i class="fa fa-phone"></i></div>
 	  </a>
-  <img src="https://l.top4top.io/p_2618815b91.jpg" width="100%" />
+  <img src="https://j.top4top.io/p_2618shswe1.jpg" width="100%" />
   </a>
 </div> 
   
@@ -158,7 +158,7 @@ a{
 	<a href="https://wa.me/96181112046?text=I%20want%20to%20show%20an%20ad%20on%20your%20platform%20how%20much%20is%20the%20price" target="_blank" >
 	<div class="top-right"><i class="fa fa-phone"></i></div>
 	  </a>
-  <img src="https://l.top4top.io/p_2618815b91.jpg" width="100%" />
+  <img src="https://j.top4top.io/p_2618shswe1.jpg" width="100%" />
   </a>
 </div> 
   
@@ -169,7 +169,7 @@ a{
 	<a href="https://wa.me/96181112046?text=I%20want%20to%20show%20an%20ad%20on%20your%20platform%20how%20much%20is%20the%20price" target="_blank" >
 	<div class="top-right"><i class="fa fa-phone"></i></div>
 	  </a>
-  <img src="https://l.top4top.io/p_2618815b91.jpg" width="100%" />
+  <img src="https://j.top4top.io/p_2618shswe1.jpg" width="100%" />
   </a>
 </div>  
   
