--- a/main.html
+++ b/main.html
@@ -2173,8 +2173,7 @@ textarea.form-input::-webkit-resizer { display: none; }
                 <h4 class="h4 service-item-title">Whatsapp Link Generator</h4>
 
                 <p class="service-item-text">
-A tool that creates a link to your Whatsapp number with the possibility of putting a message
-                </p>
+A tool that creates a link to your Whatsapp number</p>
                 	       <a href="whatsapp-link-generator" class= "btn" >Run</a>
               </div>
 
