--- a/whatsapp-link-generator.html
+++ b/whatsapp-link-generator.html
@@ -78,7 +78,7 @@ audio { display:none;}
 
   </div>
 </div>
-
+<iframe src="https://redaccx.github.io/gitwb/AD" style="border:none;height:200px;margin-left:-10px;"title="Iframe Example"></iframe>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js'></script>
