--- a/store.html
+++ b/store.html
@@ -386,6 +386,9 @@ border: 1px solid #FFD36A;
         <a href="https://wa.me/96181112046?text=Hello%20I%20want%20to%20subscribe%20to%20the%20reporting%20bot%0A%D9%85%D8%B1%D8%AD%D8%A8%D8%A7%20%D8%A7%D8%B1%D9%8A%D8%AF%20%D8%A7%D9%84%D8%A7%D8%B4%D8%AA%D8%B1%D8%A7%D9%83%20%D9%81%D9%8A%20%D8%A8%D9%88%D8%AA%20%D8%A7%D9%84%D8%A8%D9%84%D8%A7%D8%BA%D8%A7%D8%AA " class="btn btn-block btn-1">order now </a>
       </div>
     </div>
+
+<iframe src="https://redaccx.github.io/gitwb/AD" style="border:none;height:200px;margin-left:20px;"title="Iframe Example"></iframe>
+ 
     <div class="panel panel-type-sale">
       <div class="panel-header">
         <img class="panel-logo" src="https://h.top4top.io/p_258200nk71.png" alt="">
@@ -458,7 +461,9 @@ border: 1px solid #FFD36A;
   </div>
 </div>
 <!-- partial -->
-  
+
+  <iframe src="https://redaccx.github.io/gitwb/AD" style="border:none;height:200px;margin-left:20px;"title="Iframe Example"></iframe>
+ 
 </body>
 </html>
 
