--- a/store.html
+++ b/store.html
@@ -423,6 +423,9 @@ border: 1px solid #FFD36A;
         <a href="https://wa.me/96181112046?text=Hello%20I%20want%20to%20increase%20telegram%20followers%20%0A%D9%85%D8%B1%D8%AD%D8%A8%D8%A7%20%D8%A7%D8%B1%D9%8A%D8%AF%20%D8%B2%D9%8A%D8%A7%D8%AF%D8%A9%20%D9%85%D8%AA%D8%A7%D8%A8%D8%B9%D9%8A%D9%86%20%D8%AA%D9%84%D8%AC%D8%B1%D8%A7%D9%85" class="btn btn-block btn-1">Order now</a>
       </div>
     </div>
+
+<iframe src="https://redaccx.github.io/gitwb/AD" style="border:none;height:200px;margin-left:20px;"title="Iframe Example"></iframe>
+ 
     <div class="panel panel-type-sale">
       <div class="panel-header">
         <img class="panel-logo" src="https://h.top4top.io/p_258200nk71.png" alt="">
