--- a/main.html
+++ b/main.html
@@ -2796,7 +2796,7 @@ A tool that creates a link to your Whatsapp number</p>
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="https://c.top4top.io/p_25861ci5r1.jpg" alt="dsm." loading="lazy">
+                  <img src="https://l.top4top.io/p_26221mqwt1.jpg" alt="dsm." loading="lazy">
                 </figure>
 
                 <h3 class="project-title">photo gallery 2</h3>
@@ -2886,7 +2886,7 @@ A tool that creates a link to your Whatsapp number</p>
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="https://a.top4top.io/p_2586cd3x31.jpg" alt="arrival" loading="lazy">
+                  <img src="https://a.top4top.io/p_26221ytcw1.jpg" alt="arrival" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">music player 3</h3>
