--- a/CfXDg.html
+++ b/CfXDg.html
@@ -136,7 +136,7 @@ body section .description strong {
       </div>
     </div>
     <div class="img-container">
-      <img src="https://k.top4top.io/p_2622hzt4p1.jpg" alt="loading ">
+      <img src="https://j.top4top.io/p_2622jfp3a1.jpg" alt="loading ">
     </div>
     <div class="toolbar">
       <a class="like">
