--- a/main.html
+++ b/main.html
@@ -2330,9 +2330,9 @@ A tool that creates a link to your Whatsapp number with the possibility of putti
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-               SourceCode Ready-to-edit music player
+               Source Code Ready-to-edit music player
                   </p>
-               	       <a href="vip-signin" class= "btn" >view</a>
+               <h5 class="fa fa-eye" style="color:#ffd36a;" >    <a href="vip-signin" class= "btn" >view</a></h5>
                 </div>
 
               </div>
@@ -2349,9 +2349,9 @@ A tool that creates a link to your Whatsapp number with the possibility of putti
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                                        Source is an online store ready for editing 
+                                        Source Code is an online store ready for editing 
                   </p>
-                  	       <a href="vip-signin" class= "btn" >view</a>
+                  <h5 class="fa fa-eye" style="color:#ffd36a;" >	               	  	       <a href="vip-signin" class= "btn" >view</a> </h5>
                 </div>
 
               </div>
@@ -2368,9 +2368,9 @@ A tool that creates a link to your Whatsapp number with the possibility of putti
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-      Source is a movie site ready for editing
+      Source Code is a movie site ready for editing
                   </p>
-                  	       <a href="vip-signin" class= "btn" >view</a>
+            <h5 class="fa fa-eye" style="color:#ffd36a;" >	               	                  <a href="vip-signin" class= "btn" >view</a></h5>
                 </div>
 
               </div>
@@ -2557,7 +2557,7 @@ A tool that creates a link to your Whatsapp number with the possibility of putti
 
               <h4 class="h4 timeline-item-title">Web designer</h4>
 
-              <span>2010 — 2013</span>
+              <span>2010— 2013</span>
 
               <p class="timeline-text">
                 Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
