--- a/main.html
+++ b/main.html
@@ -69,14 +69,14 @@
   --ff-poppins: 'Poppins', sans-serif;
 
   /* font-size */
-  --fs-1: 24px;
-  --fs-2: 18px;
-  --fs-3: 17px;
-  --fs-4: 16px;
-  --fs-5: 15px;
-  --fs-6: 14px;
-  --fs-7: 13px;
-  --fs-8: 14px;
+  --fs-1: 22px;
+  --fs-2: 16px;
+  --fs-3: 15px;
+  --fs-4: 14px;
+  --fs-5: 13px;
+  --fs-6: 12px;
+  --fs-7: 11px;
+  --fs-8: 12px;
 
   /* font-weight */
   --fw-300: 300;
@@ -331,8 +331,8 @@ main {
 
 .circle {
   position: relative;
-  width: 80px;
-  height: 80px;
+  width: 84px;
+  height: 84px;
 }
 .circle svg {
   fill: none;
@@ -1980,7 +1980,7 @@ h9 {
 <!-- partial:index.partial.html -->
 <div class="circle">
 	   <a href="beweble">
-  <img src="https://i.top4top.io/p_2582hbajv1.png" alt="beweble" width="80"/>
+  <img src="https://h.top4top.io/p_2629vm4491.jpg" alt="beweble" width="80"/>
 
   <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" style="enable-background:new -580 439 577.9 194;"
      xml:space="preserve">  
@@ -3307,6 +3307,7 @@ for (let i = 0; i < navigationLinks.length; i++) {
 <script>
 
 var firebaseConfig = { apiKey: "AIzaSyAFPHSQdRugV6ngWGtPuUfSzBhS94D30hU", authDomain: "reda-7d506.firebaseapp.com", projectId: "reda-7d506", storageBucket: "reda-7d506.appspot.com", messagingSenderId: "637395019512", appId: "1:637395019512:web:1c7834e529eb90dcaf3d0d", measurementId: "G-Q7H13D1YFC" }; firebase.initializeApp(firebaseConfig); firebase.analytics();
+
 
 firebase.auth().onAuthStateChanged(function(user)
             {
