--- a/main.html
+++ b/main.html
@@ -1940,7 +1940,7 @@ h9 {
   <!--
     - custom css link
   -->
-  <link rel="stylesheet" href="style1. css">
+  <link rel="stylesheet" href="">
 
   <!--
     - google font link
