--- a/signup.html
+++ b/signup.html
@@ -12,9 +12,10 @@
     <div class="signup_div">
         <h3>SignUp</h3>
         <input type="email" id="signup_email_field" placeholder="Enter Your Email Address ..." required />
-        <input type="password" id="signup_pass_field" placeholder="Enter Your Password ..." required />
+        <input type="password" id="signup_pass_field" placeholder="Create Password ..." required />
+<input type="password" id="signup_pass_field" placeholder="Confirm Password ." required />
         <input type="text" id="signup_image_field" placeholder="Enter Your Profile photo URL" required />
-        <input type="text" id="signup_uname_field" placeholder="Enter Your Profile User Name: "required />
+        <input type="text" id="signup_uname_field" placeholder="Create User Name: "required />
 
         <button onclick="SignUpFunction()">Create Account</button>
 
