--- a/signup.html
+++ b/signup.html
@@ -32,7 +32,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
 
 <script src="init.js"></script>
-
+<script src="signup.js"></script>
 <script src="test.js"></script>
 
 </body>
