--- a/index.html
+++ b/index.html
@@ -1006,7 +1006,10 @@ header .container {
     margin-bottom: 0;
   }
 
-  .btn-group { justify-content: flex-start; }
+  .btn-group { 
+  justify-content: flex-start;
+
+ }
 
 
 
@@ -1302,7 +1305,11 @@ video{
   border-top: 3px solid #FFD36A ;
   border-radius: 5px;
 }
-	
+	.space {
+  width: 4px;
+  height: auto;
+  display: inline-block;
+}
 </style>
 </head>
 <body>
@@ -1417,8 +1424,9 @@ video{
             	<a href="signin" >
               <button class="btn btn-primary">SignIn </button>
 </a>
-<br>
-<br>
+<div class="space">
+  </div>
+
  	<a href="signup" >
               <button class="btn btn-secondary">SignUp </button>
               </a>
