--- a/main.html
+++ b/main.html
@@ -1927,7 +1927,11 @@ h9 {
 
  
 } 
-
+.space {
+  width: 2px;
+  height: auto;
+  display: inline-block;
+}
 
 	</style>
   <!--
@@ -2090,13 +2094,15 @@ h9 {
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
-
+<div class="space">
+  </div>
           <li class="social-item">
             <a href="https://youtube.com/channel/UCWMnleE24IIxhVBXEXsLqDw" class="social-link">
               <ion-icon name="logo-youtube"></ion-icon>
             </a>
           </li>
-
+<div class="space">
+  </div>
           <li class="social-item">
             <a href="https://instagram.com/beweble" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
