--- a/beweble-apk.html
+++ b/beweble-apk.html
@@ -71,7 +71,7 @@
     </main>
 <!-- partial -->
   <script  src="./script.js"></script>
-<iframe src="https://redaccx.github.io/gitwb/AD" style="border:none;height:200px;margin-left:-10px;></iframe>
+<iframe src="https://redaccx.github.io/beweble/AD" style="border:none;height:200px;margin-left:-10px;></iframe>
 </body>
 </html>
 
