--- a/AD.html
+++ b/AD.html
@@ -204,7 +204,7 @@ font-family: 'work sans', sans-serif;
 	<div class="top-left"><i class="fa fa-info-circle"></i></div>
 	</a>
 	<div class="top-right"><i class="fa fa-audio-description"></i></div>
-	<a href="https://redaccx.github.io/gitwb/page1" target="_blank" >
+	<a href="https://redaccx.github.io/beweble/page1" target="_blank" >
   <img src="https://i.top4top.io/p_2617qr4pq1.jpg" width="100%" />
   </a>
  </div>
@@ -214,7 +214,7 @@ font-family: 'work sans', sans-serif;
 	<div class="top-left"><i class="fa fa-info-circle"></i></div>
 	</a>
 	<div class="top-right"><i class="fa fa-audio-description"></i></div>
-	<a href="https://redaccx.github.io/gitwb/company-name-generator" target="_blank" >
+	<a href="https://redaccx.github.io/beweble/company-name-generator" target="_blank" >
   <img src="https://f.top4top.io/p_2617rz3nk1.jpg" width="100%" />
   </a>
 </div>
@@ -224,7 +224,7 @@ font-family: 'work sans', sans-serif;
 	<div class="top-left"><i class="fa fa-info-circle"></i></div>
 	</a>
 	<div class="top-right"><i class="fa fa-audio-description"></i></div>
-	<a href="https://redaccx.github.io/gitwb/beweble"target="_blank" >
+	<a href="https://redaccx.github.io/beweble/beweble"target="_blank" >
   <img src="https://e.top4top.io/p_26175slts1.jpg" width="100%" />
   </a>
 </div> 
@@ -234,7 +234,7 @@ font-family: 'work sans', sans-serif;
 	<div class="top-left"><i class="fa fa-info-circle"></i></div>
 	</a>
 	<div class="top-right"><i class="fa fa-audio-description"></i></div>
-	<a href="https://redaccx.github.io/gitwb/page3" target="_blank " >
+	<a href="https://redaccx.github.io/beweble/page3" target="_blank " >
   <img src="https://b.top4top.io/p_2617iki8e1.jpg" width="100%" />
   </a>
 </div> 
@@ -244,7 +244,7 @@ font-family: 'work sans', sans-serif;
 	<div class="top-left"><i class="fa fa-info-circle"></i></div>
 	</a>
 	<div class="top-right"><i class="fa fa-audio-description"></i></div>
-	<a href="https://redaccx.github.io/gitwb/store" target="_blank">
+	<a href="https://redaccx.github.io/beweble/store" target="_blank">
   <img src="https://j.top4top.io/p_2617v6h7w1.jpg" width="100%" />
   </a>
 </div>  
