--- a/beweble-apk.html
+++ b/beweble-apk.html
@@ -303,7 +303,7 @@ main section.home .home-img {
 <head>
   <meta charset="UTF-8">
   <title>beweble apk</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="">
 
 </head>
 <body>
