--- a/beweble-apk.html
+++ b/beweble-apk.html
@@ -363,7 +363,7 @@ main section.home .home-img {
         </section>
     </main>
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script  src=""></script>
 <iframe src="https://redaccx.github.io/beweble/AD" style="border:none;height:200px;margin-left:-10px;></iframe>
 </body>
 </html>
