--- a/beweble-apk.html
+++ b/beweble-apk.html
@@ -324,10 +324,10 @@ main section.home .home-img {
             </ul>
         </nav>
         <div class="header-btn" id="open-btn">
-            <img src="https://rvs-payment-landing-page.vercel.app/Assets/menu.svg" alt="">
+       
         </div>
     </header>
-
+  
     <div id="mobile-header-div">
         <header id="mobile-header">
             <div class="header-top">
@@ -335,7 +335,8 @@ main section.home .home-img {
                     <a href="index.html"><img src="https://i.top4top.io/p_2582hbajv1.png" alt=""></a>
                 </div>
                 <div class="header-btn" id="close-btn">
-                    <img src="https://rvs-payment-landing-page.vercel.app/Assets/close.svg" alt="">
+                
+
                 </div>
             </div>
             <nav>
@@ -363,7 +364,7 @@ main section.home .home-img {
         </section>
     </main>
 <!-- partial -->
-  <script  src=""></script>
+  <script  src="./script.js"></script>
 <iframe src="https://redaccx.github.io/beweble/AD" style="border:none;height:200px;margin-left:-10px;></iframe>
 </body>
 </html>
