--- a/main.html
+++ b/main.html
@@ -49,7 +49,7 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
-  <link rel="stylesheet" href="style1.css">
+  <link rel="stylesheet" href="1.css">
   	
 </head>
   
