--- a/main.html
+++ b/main.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>beweble</title>
+   <body onload="myFunction()">
+<div id="loading"></div>
+<header>
 <style>
 	:root {
 
@@ -115,6 +118,17 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+#loading{
+	position: fixed;
+	width: 100%;
+	height: 100vh;
+	background: #121212
+	url('https://i.top4top.io/p_2640fp4cn1.gif' )
+	 no-repeat center center;	
+	z-index: 99999;
+	background-size:100px;
 }
 
 a { text-decoration: none; }
@@ -3116,7 +3130,19 @@ A tool that creates a link to your Whatsapp number with the possibility of putti
     </div>
 
   </main>
+<script>
+		// $(document).ready(function(){
+			// 	$('div#loading').removeAttr('id');
+		// });
+		var preloader = document.getElementById("loading");
+		// window.addEventListener('load', function(){
+		// 	preloader.style.display = 'none';
+		// 	})
 
+		function myFunction(){
+			preloader.style.display = 'none';
+		};
+	</script>
 
 <script>
 firebase.auth().onAuthStateChanged(function(user)
