--- a/index.html
+++ b/index.html
@@ -1533,7 +1533,7 @@ video{
 
                 <figure class="product-banner">
 
-                  <img src="https://b.top4top.io/p_26401rq1s1.jpg" alt="">
+                  <img src="https://i.top4top.io/p_2640t44w41.jpg" alt="">
 
                   <div class="product-actions">
                     <button class="product-card-menu">
